--- a/pages/cart/index.wxml
+++ b/pages/cart/index.wxml
@@ -79,7 +79,7 @@
 <!-- 底部工具栏 -->
 <view class="footer_tool">
 	<view class="all_chk_wrap">
-		<checkbox-group bindchange="">
+		<checkbox-group bindchange="handleItemAllcheck">
 			<checkbox checked="{{allChecked}}">全选</checkbox>
 		</checkbox-group>
 	</view>
