--- a/pages/cart/index.wxml
+++ b/pages/cart/index.wxml
@@ -92,7 +92,7 @@
 		<view>包含运费</view>
 	</view>
 
-	<view class="order_pay_wrap">
+	<view class="order_pay_wrap" bindtap="handlePay">
 		结算({{totalNum}})
 	</view>
 
